--- a/Budgie/Composer/ComposerViewController.xib
+++ b/Budgie/Composer/ComposerViewController.xib
@@ -1,12 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ComposerViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ComposerViewController" customModule="Budgie" customModuleProvider="target">
             <connections>
+                <outlet property="handlerLabel" destination="dpr-pd-JdE" id="bg2-qi-N8r"/>
+                <outlet property="imageView" destination="FFy-5k-0Vt" id="TlQ-Qq-P83"/>
+                <outlet property="nameLabel" destination="ndn-D2-t9X" id="D4L-EO-Hgn"/>
+                <outlet property="textView" destination="Pv6-jj-NlO" id="WOc-kS-a3V"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +24,49 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" text="What's on your mind?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pv6-jj-NlO">
+                    <rect key="frame" x="8" y="99" width="359" height="233.5"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                </textView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FFy-5k-0Vt">
+                    <rect key="frame" x="8" y="8" width="75" height="75"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="FFy-5k-0Vt" secondAttribute="height" multiplier="1:1" id="67T-Wp-bJd"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Francisco de la Pena" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndn-D2-t9X">
+                    <rect key="frame" x="91" y="12" width="276" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@franontherocks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpr-pd-JdE">
+                    <rect key="frame" x="91" y="32.5" width="276" height="19.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="FFy-5k-0Vt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="0qX-dq-WWX"/>
+                <constraint firstItem="Pv6-jj-NlO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="4wg-vf-D6R"/>
+                <constraint firstItem="ndn-D2-t9X" firstAttribute="leading" secondItem="FFy-5k-0Vt" secondAttribute="trailing" constant="8" id="8GL-Db-I0w"/>
+                <constraint firstItem="Pv6-jj-NlO" firstAttribute="top" secondItem="FFy-5k-0Vt" secondAttribute="bottom" constant="16" id="Cce-ZG-GbQ"/>
+                <constraint firstItem="ndn-D2-t9X" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="12" id="Ed3-KW-quQ"/>
+                <constraint firstItem="dpr-pd-JdE" firstAttribute="leading" secondItem="FFy-5k-0Vt" secondAttribute="trailing" constant="8" id="UXW-zz-hab"/>
+                <constraint firstItem="FFy-5k-0Vt" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="ZGM-5Q-6Ch"/>
+                <constraint firstItem="FFy-5k-0Vt" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.2" id="bAp-RF-gLe"/>
+                <constraint firstItem="dpr-pd-JdE" firstAttribute="top" secondItem="ndn-D2-t9X" secondAttribute="bottom" id="eMT-cj-eJ7"/>
+                <constraint firstAttribute="trailing" secondItem="ndn-D2-t9X" secondAttribute="trailing" constant="8" id="fTw-sn-8oB"/>
+                <constraint firstAttribute="trailing" secondItem="Pv6-jj-NlO" secondAttribute="trailing" constant="8" id="li9-sP-2oM"/>
+                <constraint firstItem="Pv6-jj-NlO" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.35" id="po1-Cp-qqB"/>
+                <constraint firstAttribute="trailing" secondItem="dpr-pd-JdE" secondAttribute="trailing" constant="8" id="zLr-G9-mWd"/>
+            </constraints>
         </view>
     </objects>
 </document>
