--- a/Budgie/Home/SingleTweetViewController.xib
+++ b/Budgie/Home/SingleTweetViewController.xib
@@ -50,7 +50,7 @@
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" text="This is a lot of text bla bla bla" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZ9-cb-5Qy">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" text="This is a lot of text bla bla bla" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZ9-cb-5Qy">
                     <rect key="frame" x="24" y="305" width="366" height="358"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
@@ -81,10 +81,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L8D-bp-AGX">
-                            <rect key="frame" x="138" y="0.0" width="138.33333333333331" height="25"/>
+                            <rect key="frame" x="138" y="0.0" width="138" height="25"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqS-dQ-kA3">
-                                    <rect key="frame" x="0.0" y="0.0" width="138.33333333333331" height="25"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="138" height="25"/>
                                     <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
                                     <state key="normal" title="0" image="RetweetIcon">
@@ -103,10 +103,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6v-9W-5aK">
-                            <rect key="frame" x="276.33333333333326" y="0.0" width="137.66666666666669" height="25"/>
+                            <rect key="frame" x="276" y="0.0" width="138" height="25"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RO5-Cx-fBY">
-                                    <rect key="frame" x="0.0" y="0.0" width="137.33333333333337" height="25"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="137.66666666666669" height="25"/>
                                     <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
                                     <state key="normal" title="0" image="LikeIconSolid">
